<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bluetooth.gsb.com.gsbmobileble.MainApps"
    tools:showIn="@layout/app_bar_main_apps">
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonSale"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/bootstrap_brand_warning"
            android:drawableTop="@drawable/ic_sale"
            android:text="@string/button_sale"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/buttonVoid"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@android:color/holo_purple"
            android:drawableTop="@drawable/ic_void"
            android:text="@string/button_void"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/buttonRedund"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/bootstrap_brand_primary"
            android:drawableTop="@drawable/ic_refund"
            android:text="@string/button_refund"
            android:textColor="#FFF" />


    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_auth"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_auth"
            android:text="@string/txt_auth"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_print"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_print"
            android:text="@string/txt_print"
            android:layout_marginLeft="5dp"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_settle"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_settle"
            android:text="@string/txt_settle"
            android:layout_marginLeft="5dp"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_adjustment"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_adjustment"
            android:text="@string/txt_adjustment"
            android:textAlignment="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_balance"
            android:text="@string/txt_balance"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_point"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_points"
            android:text="@string/txt_points"
            android:layout_marginLeft="5dp"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_quickpass"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawableTop="@drawable/ic_quick_pass"
            android:text="@string/txt_adjustment"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txt_all"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_all"
            android:text="@string/txt_all"
            android:layout_marginLeft="5dp"
            android:textAlignment="center" />



    </LinearLayout>

</LinearLayout>
